--- a/frontend/styles/Chart.module.css
+++ b/frontend/styles/Chart.module.css
@@ -1,8 +1,7 @@
 .svg {
   display: inline-block;
-  max-width: 45rem;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 @keyframes fadeLeft {
@@ -113,9 +112,9 @@
 
 @keyframes slowZoom {
   from {
-    transform: translateY(-1%);
+    transform: scale(1);
   }
   to {
-    transform: translateY(0%);
+    transform: scale(1.05);
   }
 }
